syntax = "proto3";

package proto;

// Header represents the header of a block in the blockchain.
message Header {
    bytes prev_block_hash = 1;
    bytes tx_hash = 2;
    uint32 version = 3;
    uint64 height = 4;
    int64 timestamp = 5;
    uint64 nonce = 6;
    uint32 difficulty = 7;
}

// Transaction represents a transaction in the blockchain.
message Transaction {
    bytes from = 1;
    bytes to = 2;
    uint64 value = 3;
    bytes data = 4;
    bytes signature = 5;
    int64 nonce = 6;
    bytes hash = 7;
}

// Block represents a block in the blockchain.
message Block {
    Header header = 1;
    repeated Transaction transactions = 2;
    bytes public_key = 3;
    bytes signature = 4;
    bytes hash = 5;
}
